--- a/src/utils/cqrs/main/classes/common/util_MiscHelpers.cls
+++ b/src/utils/cqrs/main/classes/common/util_MiscHelpers.cls
@@ -32,13 +32,13 @@
  * @description       : Misc Utilities
  * @author            : Bill Anderson
  * @group             : Utility
- * @last modified on  : 09-20-2021
+ * @last modified on  : 10-11-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   01-25-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,sf:ConfusingTernary,sf:UseLocaleWithCaseConversions')
+@SuppressWarnings('PMD.ClassNamingConventions,apex:S101,sf:ConfusingTernary,sf:UseLocaleWithCaseConversions')
 public inherited sharing class util_MiscHelpers {
 
 
