--- a/src/utils/cqrs/main/classes/common/util_Strings.cls
+++ b/src/utils/cqrs/main/classes/common/util_Strings.cls
@@ -32,13 +32,13 @@
  * @description       : String Utilities
  * @author            : Bill Anderson
  * @group             : Utilities
- * @last modified on  : 08-03-2021
+ * @last modified on  : 10-11-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   11-08-2020   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions')
+@SuppressWarnings('PMD.ClassNamingConventions,apex:S101')
 public inherited sharing class util_Strings {
 
 
