--- a/src/utils/cqrs/main/classes/service/commands/handlers/cqrs_CommandHandler.cls
+++ b/src/utils/cqrs/main/classes/service/commands/handlers/cqrs_CommandHandler.cls
@@ -32,13 +32,13 @@
  * @description       : Command handler
  * @author            : Bill Anderson
  * @group             : CQRS
- * @last modified on  : 09-20-2021
+ * @last modified on  : 10-11-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   07-31-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions')
+@SuppressWarnings('PMD.ClassNamingConventions,apex:S101')
 public abstract inherited sharing class cqrs_CommandHandler implements cqrs_ICommandHandler {
 
     /////////////////////////////////////////////////////////////
