--- a/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommand.cls
+++ b/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommand.cls
@@ -32,13 +32,13 @@
  * @description       : Demarcation for a Command
  * @author            : Bill Anderson
  * @group             : Interface
- * @last modified on  : 09-20-2021
+ * @last modified on  : 10-11-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   07-30-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions')
+@SuppressWarnings('PMD.ClassNamingConventions,apex:S101')
 public interface cqrs_ICommand extends cqrs_IEntityIdentifier {
     
 }
