--- a/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommandHandlerResolver.cls
+++ b/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommandHandlerResolver.cls
@@ -32,13 +32,13 @@
  * @description       : Resolver Handler for a Command
  * @author            : Bill Anderson
  * @group             : Interface
- * @last modified on  : 09-20-2021
+ * @last modified on  : 10-11-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   07-30-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions')
+@SuppressWarnings('PMD.ClassNamingConventions,apex:S101')
 public interface cqrs_ICommandHandlerResolver {
     // resolve a command
     cqrs_ICommandHandler resolve(cqrs_ICommand command);
