--- a/src/utils/cqrs/main/classes/common/util_MiscHelpers.cls
+++ b/src/utils/cqrs/main/classes/common/util_MiscHelpers.cls
@@ -38,7 +38,7 @@
  * Ver   Date         Author          Modification
  * 1.0   01-25-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,apex:S101,sf:ConfusingTernary,sf:UseLocaleWithCaseConversions')
+@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101,sf:ConfusingTernary,sf:UseLocaleWithCaseConversions')
 public inherited sharing class util_MiscHelpers {
 
 
