--- a/src/utils/cqrs/main/classes/service/commands/handlers/cqrs_CommandHandlerResolver.cls
+++ b/src/utils/cqrs/main/classes/service/commands/handlers/cqrs_CommandHandlerResolver.cls
@@ -38,7 +38,7 @@
  * Ver   Date         Author          Modification
  * 1.0   07-31-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,apex:S101')
+@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101')
 public inherited sharing class cqrs_CommandHandlerResolver extends cqrs_HandlerResolverBase implements cqrs_ICommandHandlerResolver {
     //////////////////////////////////////////////////////////////////////////
     // Public Methods
