--- a/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommandResult.cls
+++ b/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommandResult.cls
@@ -39,7 +39,7 @@
  * Ver   Date         Author          Modification
  * 1.0   07-30-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,apex:S101')
+@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101')
 public interface cqrs_ICommandResult extends cqrs_IResult {
  
 }
