added suppress on naming convention [sq]

--- a/src/utils/cqrs/main/classes/service/services/resolver/cqrs_ServiceProvider.cls
+++ b/src/utils/cqrs/main/classes/service/services/resolver/cqrs_ServiceProvider.cls
@@ -38,7 +38,7 @@
  * Ver   Date         Author          Modification
  * 1.0   08-03-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,squid:S00101')
+@SuppressWarnings('PMD.ClassNamingConventions,squid:apex:101')
 public virtual inherited sharing class cqrs_ServiceProvider extends cqrs_HandlerResolverBase implements cqrs_IServiceProvider {
 
     /////////////////////////////////////////////////////////
