--- a/src/utils/cqrs/main/classes/common/util_UserContext.cls
+++ b/src/utils/cqrs/main/classes/common/util_UserContext.cls
@@ -32,13 +32,13 @@
  * @description       : User Context
  * @author            : Bill Anderson
  * @group             : Utilities
- * @last modified on  : 10-11-2021
+ * @last modified on  : 10-12-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   07-31-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101,sf:TooManyMethods')
+@SuppressWarnings('PMD.ClassNamingConventions,squid:S101,sf:TooManyMethods')
 public virtual inherited sharing class util_UserContext implements util_IUserContext {
 
     //////////////////////////////////////////////////
