--- a/src/utils/cqrs/main/classes/service/commands/base/cqrs_BaseQueryAndCommandContext.cls
+++ b/src/utils/cqrs/main/classes/service/commands/base/cqrs_BaseQueryAndCommandContext.cls
@@ -32,13 +32,13 @@
  * @description       : Base Class for Query and Command Context
  * @author            : Bill Anderson
  * @group             : Core
- * @last modified on  : 10-11-2021
+ * @last modified on  : 10-12-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   08-02-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101')
+@SuppressWarnings('PMD.ClassNamingConventions,squid:S101')
 public abstract inherited sharing class cqrs_BaseQueryAndCommandContext implements cqrs_IEntityIdentifier {
 
     ////////////////////////////////////////////////////////////////////
