--- a/src/utils/cqrs/main/classes/service/commands/dispatcher/cqrs_CommandDispatcher.cls
+++ b/src/utils/cqrs/main/classes/service/commands/dispatcher/cqrs_CommandDispatcher.cls
@@ -32,13 +32,13 @@
  * @description       : Command Dispatcher
  * @author            : Bill Anderson
  * @group             : CQRS
- * @last modified on  : 10-11-2021
+ * @last modified on  : 10-12-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   07-31-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101')
+@SuppressWarnings('PMD.ClassNamingConventions,squid:S101')
 public virtual inherited sharing class cqrs_CommandDispatcher implements cqrs_ICommandDispatcher {
 
 
