--- a/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommandHandler.cls
+++ b/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommandHandler.cls
@@ -33,13 +33,13 @@
  *                      Could include interfaces for CCC, Mapper, Validator, etc. - TBD                    
  * @author            : Bill Anderson
  * @group             : Interface
- * @last modified on  : 10-11-2021
+ * @last modified on  : 10-12-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   07-30-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101')
+@SuppressWarnings('PMD.ClassNamingConventions,squid:S101')
 public interface cqrs_ICommandHandler {
     // execute a command
     cqrs_ICommandResult execute(cqrs_ICommand command);
