--- a/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommandResult.cls
+++ b/src/utils/cqrs/main/classes/service/interface/command/cqrs_ICommandResult.cls
@@ -33,13 +33,13 @@
  *                      could place here ... but, violating the pattern a bit already
  * @author            : Bill Anderson
  * @group             : Interface
- * @last modified on  : 10-11-2021
+ * @last modified on  : 10-12-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   07-30-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101')
+@SuppressWarnings('PMD.ClassNamingConventions,squid:S101')
 public interface cqrs_ICommandResult extends cqrs_IResult {
  
 }
