--- a/src/utils/cqrs/main/classes/service/queries/base/cqrs_BaseQuery.cls
+++ b/src/utils/cqrs/main/classes/service/queries/base/cqrs_BaseQuery.cls
@@ -32,13 +32,13 @@
  * @description       : Base Query
  * @author            : Bill Anderson
  * @group             : CQRS
- * @last modified on  : 10-11-2021
+ * @last modified on  : 10-12-2021
  * @last modified by  : Bill Anderson
  * Modifications Log
  * Ver   Date         Author          Modification
  * 1.0   07-31-2021   Bill Anderson   Initial Version
  **/
-@SuppressWarnings('PMD.ClassNamingConventions,sf.apex:S101')
+@SuppressWarnings('PMD.ClassNamingConventions,squid:S101')
 public virtual inherited sharing class cqrs_BaseQuery extends cqrs_BaseQueryAndCommandContext implements cqrs_IQuery {
 
     ////////////////////////////////////////////////////////////////////
